tests/snapshots/snapshot_test__snapshot_bar_chart.snap
---
source: tests/snapshot_test.rs
assertion_line: 28
expression: output
---
    ──────────────────────────────revenue by city──────────────────────────────┐
 4k│████████████████████                                                       │
   │████████████████████                                                       │
   │████████████████████ ▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅                                  │
 3k│████████████████████ ████████████████████                                  │
   │████████████████████ ████████████████████                                  │
 2k│████████████████████ ████████████████████                                  │
   │████████████████████ ████████████████████                                  │
   │████████████████████ ████████████████████                                  │
 1k│████████████████████ ████████████████████                                  │
   │████████████████████ ████████████████████ ████████████████████             │
  0│████████4.2k████████ ████████3.3k████████ ████████800█████████             │
           Tokyo                Osaka                Nagoya                    │
    ───────────────────────────────────────────────────────────────────────────┘
