tests/snapshots/snapshot_test__snapshot_diff_temporal_line.snap
---
source: tests/snapshot_test.rs
assertion_line: 71
expression: output
---
┌──────────────────────ts_daily_before vs ts_daily_after───────────────────────┐
│250      │revenue                                            ┌───────────────┐│
│         │                                                  █ ts_daily_before││
│         │                                                  █ ts_daily_after ││
│         │                                                   └───────────────┘│
│         │                                                                 ⡠⠔⠊│
│         │                                                             ⢀⡠⠒⠉   │
│         │                                                          ⣀⠔⠊⠁      │
│200      │                                                      ⢀⡠⠔⠉          │
│         │                                                    ⢀⠔⠁             │
│         │                                                  ⢀⠔⠁           ⢀⡠⠤⠒│
│         │                                                ⢀⠔⠁        ⣀⡠⠔⠒⠉⠁   │
│         │                                              ⡠⠒⠁     ⣀⠤⠔⠊⠉         │
│         │                                            ⡠⠊    ⢀⡠⠒⠉              │
│150      │                        ⣀⠤⠔⠒⠢⠤⠤⢄⣀⣀        ⡠⠊   ⣀⠤⠊⠁                 │
│         │                  ⢀⣀⠤⠒⠊⠉ ⣀⡠⠤⢄⣀⣀⡀  ⠉⠉⠑⠒⠒⠢⠤⠊ ⢀⡠⠔⠉                     │
│         │             ⣀⡠⠤⠒⠉⠁ ⣀⠤⠔⠒⠉      ⠈⠉⠉⠒⠒⠢⠤⠤⢄⣀⠤⠒⠁                        │
│         │        ⣀⡠⠔⠒⠉ ⢀⣀⠤⠒⠊⠉                                                │
│         │   ⢀⡠⠤⠒⠉ ⢀⡠⠤⠒⠉⠁                                                     │
│         │⠤⠒⠉⠁⢀⣀⠤⠒⠉⠁                                                          │
│100      │⣀⠤⠒⠊⠁                                                           date│
│         └────────────────────────────────────────────────────────────────────│
│2024-01-01            2024-01-02 2024-01-03 2024-01-04 2024-01-05   2024-01-06│
└──────────────────────────────────────────────────────────────────────────────┘
