tests/snapshots/snapshot_test__snapshot_histogram.snap
---
source: tests/snapshot_test.rs
expression: output
---
    Distribution of revenue────────────────────────────────────────────────────┐
  1│██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
   │██████ ██████        ██████        ██████               ██████ ██████      │
  0│██1███ ██1███        ██1███        ██1███               ██1███ ██1███      │
     800    920    1.0k   1.2k   1.3k   1.4k   1.5k   1.6k   1.8k   1.9k       │
    ───────────────────────────────────────────────────────────────────────────┘
