tests/snapshots/snapshot_test__snapshot_json_input.snap
---
source: tests/snapshot_test.rs
assertion_line: 68
expression: stdout
---
    score by name──────────────────────────────────────────────────────────────┐
100│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁ ████████████████████                                  │
   │████████████████████ ████████████████████ ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂             │
 80│████████████████████ ████████████████████ ████████████████████             │
   │████████████████████ ████████████████████ ████████████████████             │
 60│████████████████████ ████████████████████ ████████████████████             │
   │████████████████████ ████████████████████ ████████████████████             │
 40│████████████████████ ████████████████████ ████████████████████             │
   │████████████████████ ████████████████████ ████████████████████             │
 20│████████████████████ ████████████████████ ████████████████████             │
   │████████████████████ ████████████████████ ████████████████████             │
  0│█████████85█████████ █████████92█████████ █████████78█████████             │
           Alice                 Bob                Charlie                    │
    ───────────────────────────────────────────────────────────────────────────┘
