tests/snapshots/snapshot_test__snapshot_line_chart_default.snap
---
source: tests/snapshot_test.rs
assertion_line: 21
expression: output
---
┌───────────────────────────────revenue vs date────────────────────────────────┐
│2k       │revenue                                             ⡠⠔⠁     ┌──────┐│
│         │                                                 ⢀⠔⠊       █ Tokyo ││
│         │                                               ⡠⠒⠁         █ Osaka⣀││
│         │                                            ⢀⠔⠉    ⢀⣀⣀⣀⠤⠤⠤⠤█ Nagoya││
│         │                                     ⣀⣀⣀⣀⠤⠤⠤⠔⠒⠒⠒⠉⠉⠉⠁        └──────┘│
│         │                       ⣀⣀⣀⡠⠤⠤⠤⠒⠒⠒⠊⠉⠉⠉  ⣀⠔⠁                          │
│         │             ⠠⠤⠔⠒⠒⠒⠉⠉⠉⠉             ⢀⠤⠊                             │
│1.5k     │                                  ⡠⠔⠁                               │
│         │                               ⢀⠔⠊                                  │
│         │                             ⡠⠒⠁                                    │
│         │                       ⢀⣀⣀⠤⠔⠉                                       │
│         │              ⣀⣀⠤⠤⠔⠒⠒⠉⠉⠁                                            │
│         │    ⣀⣀⡠⠤⠤⠒⠒⠊⠉⠉                                                      │
│1k       │⠒⠊⠉⠉                                                                │
│         │                                                                    │
│         │                                        •                           │
│         │                                                                    │
│         │                                                                    │
│         │                                                                    │
│500      │                                                                date│
│         └────────────────────────────────────────────────────────────────────│
│2024-01-01                            2024-04-01                    2024-06-01│
└──────────────────────────────────────────────────────────────────────────────┘
