tests/snapshots/snapshot_test__snapshot_svg_bar.snap
---
source: tests/snapshot_test.rs
assertion_line: 85
expression: output
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 384" width="640" height="384">
<rect width="100%" height="100%" fill="#1e1e1e"/>
<style>text { font-family: 'JetBrains Mono', 'Fira Code', 'Cascadia Code', monospace; font-size: 14px; white-space: pre; }</style>
<text y="13"><tspan x="0" fill="#cccccc">    ──────────────────────────────</tspan><tspan x="272" fill="#cccccc" font-weight="bold">revenue by city</tspan><tspan x="392" fill="#cccccc">──────────────────────────────┐</tspan></text>
<text y="29"><tspan x="0" fill="#808080"> 4k│</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">                    </tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="45"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">                    </tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="61"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">                    </tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="77"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">                    </tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="93"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="109"><tspan x="0" fill="#808080"> 3k│</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="125"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="141"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="157"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="173"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="189"><tspan x="0" fill="#808080"> 2k│</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="205"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="221"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="237"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="253"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="269"><tspan x="0" fill="#808080"> 1k│</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="285"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">                    </tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="301"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">████████████████████</tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="317"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">████████████████████</tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="333"><tspan x="0" fill="#808080">   │</tspan><tspan x="32" fill="#4ec9b0">████████████████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████████████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">████████████████████</tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="349"><tspan x="0" fill="#808080">  0│</tspan><tspan x="32" fill="#4ec9b0">████████4.2k████████</tspan><tspan x="192" fill="#cccccc"> </tspan><tspan x="200" fill="#dcdcaa">████████3.3k████████</tspan><tspan x="360" fill="#cccccc"> </tspan><tspan x="368" fill="#6a9955">████████800█████████</tspan><tspan x="528" fill="#cccccc">             │</tspan></text>
<text y="365"><tspan x="0" fill="#cccccc">           Tokyo                Osaka                Nagoya                    │</tspan></text>
<text y="381"><tspan x="0" fill="#cccccc">    ───────────────────────────────────────────────────────────────────────────┘</tspan></text>
</svg>
